# python-project-template

./: .editorconfig  .pre-commit-config.yaml  .pre-commit-config.yml  CODEOWNERS  Makefile  README.md  activate.sh  cookiecutter.json  pyproject.toml  requirements.txt
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: check-pr-title.yml  format-and-fail.yml  requirements-up-to-date.yml  run-tests.yml
hooks/: post_gen_project.py  pre_gen_project.py
project/: __main__.py
test/: test_example.py
{{ cookiecutter.project_slug }}/: __main__.py
