[project]
name = "python-project-template"
version = "0.1.0"
description = "This repository is a template for a python project using the poetry container. The intent is to do all the basic lifting for a python project so that people can hit the ground running with their ideas."
authors = ["michplunkett"]
readme = "README.md"
requires-python = ">=3.12.0"
dependencies = [
    "black>=24.10.0",
    "pre-commit>=4.0.1",
    "pytest>=8.3.4",
    "requests>=2.32.3",
    "responses>=0.25.3",
]
